--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     <!-- Templates -->
     <script src="js/handlebars-runtime.js"></script>
     <script src="js/templates/templates.js"></script>
-    <script src="js/templater.js"></script>
+    <script src="js/committee.js"></script>
 
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
