--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <meta name="author" content="">
 
     <title>Vehicle Design</title>
-    <!-- <title>Test</title> -->
 
     <link rel="shortcut icon" href="img/VD-favicon.ico">
 
@@ -68,7 +67,8 @@
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
-                    <li class="dropdown">
+
+<!--                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">CubeSat<span class="caret"></span></a>
                       <ul class="dropdown-menu pull-left" role="menu">
                         <li><a href="#">About</a></li>
@@ -84,6 +84,7 @@
                         <li><a href="#">Team</a></li>
                       </ul>
                     </li>
+ -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -214,6 +215,7 @@
 
     <!-- Templates -->
     <script src="js/handlebars-runtime.js"></script>
+    <script src="js/helpers.js"></script>
     <script src="js/templates/templates.js"></script>
     <script src="js/committee.js"></script>
 
