--- a/index.html
+++ b/index.html
@@ -68,23 +68,24 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
 
-<!--                     <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">CubeSat<span class="caret"></span></a>
+                    <li class="dropdown">
+                      <a href="cubesat.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">CubeSat<span class="caret"></span></a>
                       <ul class="dropdown-menu pull-left" role="menu">
                         <li><a href="#">About</a></li>
-                        <li><a href="#">News</a></li>
+                        <!-- <li><a href="#">News</a></li> -->
                         <li><a href="#">Team</a></li>
                       </ul>
                     </li>
+
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Eco-Marathon<span class="caret"></span></a>
                       <ul class="dropdown-menu" role="menu">
                         <li><a href="#">About</a></li>
-                        <li><a href="#">News</a></li>
+                        <!-- <li><a href="#">News</a></li> -->
                         <li><a href="#">Team</a></li>
                       </ul>
                     </li>
- -->
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
