--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
                     <li class="dropdown">
                       <a href="cubesat.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">CubeSat<span class="caret"></span></a>
                       <ul class="dropdown-menu pull-left" role="menu">
-                        <li><a href="#">About</a></li>
+                        <li><a href="cubesat.html#about">About</a></li>
                         <!-- <li><a href="#">News</a></li> -->
-                        <li><a href="#">Team</a></li>
+                        <li><a href="cubesat.html#committee">Team</a></li>
                       </ul>
                     </li>
 
                     <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Eco-Marathon<span class="caret"></span></a>
+                      <a href="eco-marathon.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">Eco-Marathon<span class="caret"></span></a>
                       <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">About</a></li>
+                        <li><a href="eco-marathon.html#about">About</a></li>
                         <!-- <li><a href="#">News</a></li> -->
-                        <li><a href="#">Team</a></li>
+                        <li><a href="eco-marathon.html#committee">Team</a></li>
                       </ul>
                     </li>
 
