Changed backgrounds of cubesat and eco-marathon about sections

--- a/cubesat.html
+++ b/cubesat.html
@@ -72,7 +72,7 @@
     </nav>
 
     <!-- About section -->
-    <section id="about" class="content-section about-section">
+    <section id="about" class="content-section cubesat-about-section">
         <div id="about-heading">
             <div class="container">
                 <div class="row">
