--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
  -->
 
     <!-- About section -->
-    <section id="about" class="content-section about-section">
+    <!-- <section id="about" class="content-section about-section"> -->
+    <section id="about" class="content-section vd-about-section">
         <div id="about-heading">
             <div class="container">
                 <div class="row">
