--- a/eco-marathon.html
+++ b/eco-marathon.html
@@ -72,7 +72,7 @@
     </nav>
 
     <!-- About section -->
-    <section id="about" class="content-section about-section">
+    <section id="about" class="content-section eco-about-section">
         <div id="about-heading">
             <div class="container">
                 <div class="row">
