Added news section (twitter timeline)

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-<!--                     <li>
-                        <a class="page-scroll" href="#news-heading">News</a>
-                    </li>
- -->                    <li>
+                    <li>
                         <a class="page-scroll" href="#about">About</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#news">News</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#committee">Committee</a>
@@ -99,30 +99,24 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <!-- <h1 class="brand-heading">Grayscale</h1> -->
-                        <!-- <img class="img-responsive" src="img/VDLogo_wob.jpg"> -->
+                    <!-- <div class="col-md-7"> -->
                         <img class="img-responsive" src="img/LogoWhiteText.png">
                         <!-- <p class="intro-text">A free, responsive, one page Bootstrap theme.<br>Created by Start Bootstrap.</p> -->
-                        <a href="#about" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
-                        </a>
+
                     </div>
+<!--                     <div class="col-md-5">
+                        <a class="twitter-timeline" href="https://twitter.com/ICVehicleDesign" data-widget-id="563783926817492993">Tweets by @ICVehicleDesign</a>
+                        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                    </div>
+ -->                </div>
+                <div class="row">
+                    <a href="#about" class="btn btn-circle page-scroll">
+                        <i class="fa fa-angle-double-down animated"></i>
+                    </a>
                 </div>
             </div>
         </div>
     </header>
-
-    <!-- News Section -->
-<!--     <section id="news" class="content-section text-center">
-        <div id="news-heading" class="news-section">
-            <div class="container" style="padding: 50px 100px;">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h1>News</h1>
-                </div>
-            </div>
-        </div>
-    </section>
- -->
 
     <!-- About section -->
     <!-- <section id="about" class="content-section about-section"> -->
@@ -145,6 +139,36 @@
                         <br>So join now!</p>
                     </div>
                 </div> 
+            </div>
+        </div>
+    </section>
+
+    <!-- News Section -->
+    <section id="news" class="content-section text-center vd-news-section">
+        <div id="news-heading">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h1>News</h1>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <div class="tweets">
+                            <a class="twitter-timeline"
+                              href="https://twitter.com/ICVehicleDesign"
+                              data-widget-id="563783926817492993"
+                              data-theme="dark"
+                              data-chrome="transparent noheader"
+                              data-border-color="#9C003E"
+                              data-tweet-limit="3"
+                            >
+                            Tweets by @ICVehicleDesign
+                            </a>
+                            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                        </div>
+                    </div>
+                </div> 
+
             </div>
         </div>
     </section>
