Updated navbars in cubesat and eco-marathon pages

--- a/eco-marathon.html
+++ b/eco-marathon.html
@@ -55,15 +55,36 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a href="index.html#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#committee">Team</a>
+                        <a href="index.html#news">News</a>
                     </li>
-<!--                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                    <li>
+                        <a href="index.html#committee">Committee</a>
                     </li>
- -->
+                    <li>
+                        <a href="index.html#contact">Contact</a>
+                    </li>
+
+                    <li class="dropdown">
+                      <a href="cubesat.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">CubeSat<span class="caret"></span></a>
+                      <ul class="dropdown-menu pull-left" role="menu">
+                        <li><a href="cubesat.html#about">About</a></li>
+                        <!-- <li><a href="#">News</a></li> -->
+                        <li><a href="cubesat.html#committee">Team</a></li>
+                      </ul>
+                    </li>
+
+                    <li class="dropdown">
+                      <a href="eco-marathon.html" class="dropdown-toggle disabled" data-toggle="dropdown" role="button" aria-expanded="false">Eco-Marathon<span class="caret"></span></a>
+                      <ul class="dropdown-menu" role="menu">
+                        <li><a class="page-scroll" href="#about">About</a></li>
+                        <!-- <li><a href="#">News</a></li> -->
+                        <li><a class="page-scroll" href="#committee">Team</a></li>
+                      </ul>
+                    </li>
+
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
